# PixelmonPackMaker

./: .gitignore  Cargo.toml  README.md
configs/: config-9.3.9.json
crates/pixelmon-bin/: Cargo.toml
crates/pixelmon-bin/src/: config.rs  expixel.rs  main.rs  resource.rs  resource_pack_writer.rs
crates/pixelmon-types/: Cargo.toml
crates/pixelmon-types/src/: lib.rs  sound_registry.rs  species_data.rs
